--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,11 +49,11 @@ a {
   text-decoration: none; /* No underlining */
 }
 a:visited { /* visited link */
-  color: #0E1ECD;
+  color: #d46d18;;
 }
 a:hover,
 a:focus {
-  color: #cc6540;
+  color: #d46d18;
   text-transform: uppercase;
   font-weight: 400;
   text-decoration: underline; /* Underlining when hovering over a link */ }
@@ -63,34 +63,39 @@ a:active { /* selected link */
   color: #A54C05;
 }
 .button {
-  display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-  background-color: #d46d18;
-  color: #ffffff; /* needed to override the default link color */
-  font-weight: 400;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid #d46d18; /* width of the border, type, color */
-  transition: 0.2s opacity;
+  color: #fff !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #d46d18;
+padding: 20px;
+border-radius: 5px;
+display: inline-block;
+border: none;
+transition: all 0.4s ease 0s;
 }
+
 .button:hover {
-  opacity: 0.8; /* Reduces the opacity of the button to 80% */
-  text-decoration: none;
+background: #52514f;
+letter-spacing: 1px;
+-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+transition: all 0.4s ease 0s;
 }
-.button:active {
-  opacity: 0.8; /* Reduces the opacity of the button to 80% */
-  text-decoration: none;
-}
+
 .button.contact {
-  background-color: transparent;
-  color: #ff7f50;
-  text-transform: uppercase;
-  border: 2px solid #d46d18;
+color: #52514f !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #ffffff;
+padding: 20px;
+border: 4px solid #d46d18 !important;
+display: inline-block;
+transition: all 0.4s ease 0s;
 }
 .button.contact:hover {
-  background-color: #d46d18;
-  color: #ffffff;
-}
-.button.contact:active {
-  background-color: #d46d18;
-  color: #ffffff;
+color: #ffffff !important;
+background: #d46d18;
+border-color: #d46d18 !important;
+transition: all 0.4s ease 0s;
 }
