--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,9 +11,11 @@ header {
   background-color: #ffffff;
   padding: 10px;
   margin: 10px;
-  border-bottom: 3px solid #52514f;
   text-align: unset;
   position: relative;
+}
+.nav-list {
+  
 }
 
 nav > ul {
@@ -134,6 +136,10 @@ transition: all 0.4s ease 0s;
   clear: both;
   display: table;
 }
+.center {
+  margin: auto;
+  text-align: center
+}
 #work .row {
   padding-bottom: 25px;
 }
@@ -154,6 +160,50 @@ transition: all 0.4s ease 0s;
 #work h2 {
   text-align:center
 }
+.grow:hover {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+}
+.berlin-illustration {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+.sun{
+  animation-duration: 4s;
+ animation-name: color-change;
+ animation-iteration-count: infinite;
+ animation-direction: alternate;
+ animation-timing-function: linear;
+}
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+.cloud-front {
+  animation-duration: 30s;
+  animation-name: cloud-move;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+
+
+
 
 
 /* ==============================
