--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,7 @@ header {
   position: relative;
 }
 .nav-list {
-  
+
 }
 
 nav > ul {
@@ -160,10 +160,13 @@ transition: all 0.4s ease 0s;
 #work h2 {
   text-align:center
 }
-.grow:hover {
-  -webkit-transform: scale(1.3);
-  -ms-transform: scale(1.3);
-  transform: scale(1.3);
+.zoom {
+  padding: 50px;
+  transition: transform .2s; /* Animation */
+  margin: 0 auto;
+}
+.zoom:hover {
+  transform: scale(1.5);
 }
 .berlin-illustration {
   width: 100%;
@@ -175,7 +178,7 @@ transition: all 0.4s ease 0s;
   50% {fill: #fcffad;}
   100% {fill: #f76414;}
 }
-.sun{
+.sun {
   animation-duration: 4s;
  animation-name: color-change;
  animation-iteration-count: infinite;
@@ -224,7 +227,11 @@ Large devices (1024px or larger)
   margin-left: auto;
   margin-right: auto;
 }
-
+nav {
+   width: auto;
+   float: right
+   margin-top: 4px;
+ }
 }
 /* ==============================
 X-large devices (1440px or larger)
