--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,14 +8,9 @@ font-family: 'Montserrat', sans-serif;
 */
 
 header {
-  background-color: #ffffff;
-  padding: 10px;
-  margin: 10px;
+  background-color: #52514f;
   text-align: unset;
   position: relative;
-}
-.nav-list {
-
 }
 
 nav > ul {
@@ -26,13 +21,11 @@ nav > ul> li {
   display: inline-block;
 }
 nav > ul > li a {
-  padding: 0 15px;
+  padding: 0 30px;
   text-transform: uppercase;font-weight: 700;
-  color: #52514f;
+  color: #ffffff
 }
-nav > ul > li > a:visited {
-  color: #d46d18;
-}
+
 
 * {
   box-sizing: border-box;
@@ -56,6 +49,8 @@ h1 {
 h2 {
   font-size: 2.25em;
   font-weight: 700;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 h3 {
   font-size: 1.75em;
@@ -74,9 +69,7 @@ a {
   letter-spacing: 2.5px;
   font-weight: 400;
   text-decoration: none; /* No underlining */
-}
-a:visited { /* visited link */
-  color: #d46d18;
+
 }
 a:hover,a:focus {
   color: #d46d18;
@@ -101,12 +94,13 @@ transition: all 0.4s ease 0s;
 }
 
 .button:hover {
-background: #52514f;
+background: #FF7303;
 letter-spacing: 1px;
 -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
 transition: all 0.4s ease 0s;
+text-decoration: none;
 }
 
 .button.contact {
@@ -121,8 +115,8 @@ transition: all 0.4s ease 0s;
 }
 .button.contact:hover {
 color: #ffffff !important;
-background: #d46d18;
-border-color: #d46d18 !important;
+background: #FF7303;
+border-color: #FF7303 !important;
 transition: all 0.4s ease 0s;
 }
 .container {
@@ -141,11 +135,11 @@ transition: all 0.4s ease 0s;
   text-align: center
 }
 #work .row {
-  padding-bottom: 25px;
+  padding-top: 25px;
 }
 #hero {
   background-color: #52514f;
-  padding: 10px 0;
+  padding-bottom: 10px;
   display: inline-block;
   text-align: center;
   width: 100%
@@ -164,6 +158,7 @@ transition: all 0.4s ease 0s;
   padding: 50px;
   transition: transform .2s; /* Animation */
   margin: 0 auto;
+  display: inline-block;
 }
 .zoom:hover {
   transform: scale(1.5);
@@ -204,7 +199,51 @@ transition: all 0.4s ease 0s;
   animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
+/*##################*/
+/*Top and Bottom Borders go Out */
+.topbottombordersout a {
+  position: relative;
+  padding: 10px 10px;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.topbottombordersout a:before, .topbottombordersout  a:after
+  {
+      position: absolute;
+      left: 0px;
+      width: 100%;
+      height: 2px;
+      background: #FFF;
+      content: "";
+      opacity: 0;
+      transition: all 0.3s;
+  }
 
+.topbottombordersout  a:before
+  {
+      top: 0px;
+      transform: translateY(10px);
+  }
+
+.topbottombordersout a:after
+  {
+      bottom: 0px;
+      transform: translateY(-10px);
+  }
+
+  .topbottombordersout  a:hover:before, .topbottombordersout  a:hover:after
+  {
+      opacity: 1;
+      transform: translateY(0px);
+      color: #FFFFFF;
+  }
+  /*#################*/
+.spacer {
+  height: 50px;
+}
+.project-card h3 {
+  margin-bottom: 20px;
+}
 
 
 
@@ -217,33 +256,6 @@ Medium devices (640px and larger)
     text-align: unset;
     padding: 20px 0 13px;
   }
-}
-/* ==============================
-Large devices (1024px or larger)
-================================= */
-@media only screen and (min-width: 1024px) {
-  .container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-nav {
-   width: auto;
-   float: right
-   margin-top: 4px;
- }
-}
-/* ==============================
-X-large devices (1440px or larger)
-================================= */
-@media only screen and (min-width: 1440px) {
-}
-/* ==============================
-Extra-large devices (1920px or larger)
-================================= */
-@media only screen and (min-width: 1920px) {
-}
-
 }
 .col-md-6 {
 float: left;
@@ -261,6 +273,21 @@ padding: 10px;
   float: left;
   width: 33.33%;
 }
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+  .container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav {
+   width: auto;
+   float: right
+   margin-top: 4px;
+ }
+}
 .col-lg-5 {
   float: left;
   width: 41.66%
@@ -268,4 +295,17 @@ padding: 10px;
 .col-lg-7 {
   float: left;
   width: 58.33%
+}
+
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+}
+/* ==============================
+Extra-large devices (1920px or larger)
+================================= */
+@media only screen and (min-width: 1920px) {
+}
+
 }
