--- a/CSS/style.css
+++ b/CSS/style.css
@@ -273,6 +273,7 @@ padding: 10px;
   float: left;
   width: 33.33%;
 }
+}
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
@@ -295,6 +296,7 @@ nav {
 .col-lg-7 {
   float: left;
   width: 58.33%
+}
 }
 
 /* ==============================
