--- a/CSS/style.css
+++ b/CSS/style.css
@@ -256,7 +256,7 @@ Medium devices (640px and larger)
     text-align: unset;
     padding: 20px 0 13px;
   }
-}
+
 .col-md-6 {
 float: left;
 width: 50%;
@@ -285,10 +285,10 @@ Large devices (1024px or larger)
 }
 nav {
    width: auto;
-   float: right
+   float: right;
    margin-top: 4px;
  }
-}
+
 .col-lg-5 {
   float: left;
   width: 41.66%
