--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,23 +9,33 @@ font-family: 'Montserrat', sans-serif;
 
 header {
   background-color: #52514f;
-  text-align: unset;
+  padding: 10px 0 4px;
+  -webkit-box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.5);
+  -moz-box-shadow:    0px 5px 15px 0px rgba(50, 50, 50, 0.5);
+  box-shadow:         0px 5px 15px 0px rgba(50, 50, 50, 0.5);
   position: relative;
 }
-
+nav {
+   width: auto;
+   float: right;
+   margin-top: 4px;
+ }
 nav > ul {
   list-style-type: none;
   padding: 0;
 }
-nav > ul> li {
-  display: inline-block;
-}
+
 nav > ul > li a {
   padding: 0 30px;
   text-transform: uppercase;font-weight: 700;
   color: #ffffff
 }
-
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 2px;
+  font-size: 20px;
+}
 
 * {
   box-sizing: border-box;
@@ -142,8 +152,10 @@ transition: all 0.4s ease 0s;
   padding-bottom: 10px;
   display: inline-block;
   text-align: center;
-  width: 100%
+  width: 100%;
+
 }
+
 #hero h1 {
   text-align: center; /* Centers text */
   color: #ffffff;
@@ -244,9 +256,9 @@ transition: all 0.4s ease 0s;
 .project-card h3 {
   margin-bottom: 20px;
 }
-
-
-
+.navtoggle li:not(:last-child) {
+  display: none;
+}
 
 /* ==============================
 Medium devices (640px and larger)
@@ -255,6 +267,7 @@ Medium devices (640px and larger)
   header {
     text-align: unset;
     padding: 20px 0 13px;
+    position: fixed;
   }
 
 .col-md-6 {
@@ -273,21 +286,38 @@ padding: 10px;
   float: left;
   width: 33.33%;
 }
+.logo {
+  min-width: 100px
+}
+
+nav > ul> li {
+  display: inline-block;
+}
+.navtoggle li:not(:last-child) {
+  display: inline-block;
+}
+.navtoggle li:last-child {
+  display: none;
+}
+
+
+
 }
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
+header {
+  text-align: unset;
+  padding: 20px 0 13px;
+}
+
   .container {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
-nav {
-   width: auto;
-   float: right;
-   margin-top: 4px;
- }
+
 
 .col-lg-5 {
   float: left;
@@ -297,6 +327,7 @@ nav {
   float: left;
   width: 58.33%
 }
+
 }
 
 /* ==============================
