--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,6 +23,7 @@ nav {
 nav > ul {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 nav > ul > li a {
@@ -35,6 +36,7 @@ nav > ul > li a {
   right: 0;
   top: 2px;
   font-size: 20px;
+  padding-right: 20;
 }
 
 * {
@@ -48,6 +50,7 @@ body {
   line-height: 1.6;
   color: #52514f;
 }
+
 
 h1, h2, h3, h4 {
   line-height: 1.4;
@@ -259,7 +262,21 @@ transition: all 0.4s ease 0s;
 .navtoggle li:not(:last-child) {
   display: none;
 }
+.navtoggle.responsive li  {
+  display: block;
+}
+.navtoggle.responsive nav {
+  padding: 24px 0 0;
+}
+.navtoggle.responsive li  {
+  display: block;
+  padding: 10px 0;
+  border-top: 1px solid rgba(255,127,80,0.5);
+}
 
+.navtoggle.responsive li:last-child  {
+  padding: 0 0 10px;
+}
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
@@ -267,7 +284,7 @@ Medium devices (640px and larger)
   header {
     text-align: unset;
     padding: 20px 0 13px;
-    position: fixed;
+    position: relative;
   }
 
 .col-md-6 {
@@ -289,7 +306,9 @@ padding: 10px;
 .logo {
   min-width: 100px
 }
-
+nav > ul {
+  margin: 1em 0;
+}
 nav > ul> li {
   display: inline-block;
 }
