--- a/CSS/style.css
+++ b/CSS/style.css
@@ -271,7 +271,6 @@ transition: all 0.4s ease 0s;
 .navtoggle.responsive li  {
   display: block;
   padding: 10px 0;
-  border-top: 1px solid rgba(255,127,80,0.5);
 }
 
 .navtoggle.responsive li:last-child  {
@@ -280,7 +279,7 @@ transition: all 0.4s ease 0s;
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 641px) {
   header {
     text-align: unset;
     padding: 20px 0 13px;
@@ -303,6 +302,10 @@ padding: 10px;
   float: left;
   width: 33.33%;
 }
+nav {
+   width:auto;
+   float: right;
+   margin-top: 4px;
 .logo {
   min-width: 100px
 }
@@ -318,7 +321,12 @@ nav > ul> li {
 .navtoggle li:last-child {
   display: none;
 }
-
+#hero {
+     text-align: center;
+   }
+ #hero span {
+ display: block;
+}
 
 
 }
