--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,11 +8,8 @@ font-family: 'Montserrat', sans-serif;
 */
 
 header {
-  background-color: #52514f;
+  background-color: #ffffff;
   padding: 10px 0 4px;
-  -webkit-box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.5);
-  -moz-box-shadow:    0px 5px 15px 0px rgba(50, 50, 50, 0.5);
-  box-shadow:         0px 5px 15px 0px rgba(50, 50, 50, 0.5);
   position: relative;
 }
 nav {
@@ -27,7 +24,7 @@ nav > ul {
 }
 
 nav > ul > li a {
-  padding: 0 30px;
+  padding: 0px;
   text-transform: uppercase;font-weight: 700;
   color: #ffffff
 }
@@ -36,8 +33,9 @@ nav > ul > li a {
   right: 0;
   top: 2px;
   font-size: 20px;
-  padding-right: 20;
+  padding-right: 10;
 }
+
 
 * {
   box-sizing: border-box;
@@ -48,7 +46,7 @@ body {
   font-size: 16px;
   font-weight: 300;
   line-height: 1.6;
-  color: #52514f;
+  color: #030E28;
 }
 
 
@@ -76,9 +74,16 @@ h4 {
 img {
   width: 100%;
 }
+#about-image img{
+
+  border: 12px solid #030E28;
+  border-radius: 4px;
+  padding: 5px;
+  width: 50%;
+}
 
 a {
-  color: #52514f;
+  color: #030E28;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 400;
@@ -86,7 +91,7 @@ a {
 
 }
 a:hover,a:focus {
-  color: #d46d18;
+  color: #030E28;
   text-transform: uppercase;
   font-weight: 700;
   text-decoration: underline; /* Underlining when hovering over a link */
@@ -95,11 +100,12 @@ a:hover,a:focus {
 a:active { /* selected link */
   color: #A54C05;
 }
-.button {
+
+  .button {
   color: #fff !important;
 text-transform: uppercase;
 text-decoration: none;
-background: #d46d18;
+background: #50CBCE;
 padding: 20px;
 border-radius: 5px;
 display: inline-block;
@@ -108,7 +114,7 @@ transition: all 0.4s ease 0s;
 }
 
 .button:hover {
-background: #FF7303;
+background: #00AFB3;
 letter-spacing: 1px;
 -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
@@ -118,24 +124,28 @@ text-decoration: none;
 }
 
 .button.contact {
-color: #52514f !important;
+color: #030E28 !important;
 text-transform: uppercase;
 text-decoration: none;
 background: #ffffff;
 padding: 20px;
-border: 4px solid #d46d18 !important;
+border: 4px solid #50CBCE !important;
 display: inline-block;
 transition: all 0.4s ease 0s;
 }
 .button.contact:hover {
 color: #ffffff !important;
-background: #FF7303;
-border-color: #FF7303 !important;
+background: #00AFB3;
+border-color: #00AFB3 !important;
 transition: all 0.4s ease 0s;
 }
+
+
+
 .container {
   padding: 0 15px;
 }
+
 .row {
   margin: 25px 0; /* 25px top and bottom, 0 left and right */
 }
@@ -145,30 +155,79 @@ transition: all 0.4s ease 0s;
   display: table;
 }
 .center {
-  margin: auto;
-  text-align: center
-}
-#work .row {
-  padding-top: 25px;
-}
-#hero {
-  background-color: #52514f;
-  padding-bottom: 10px;
-  display: inline-block;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
-  width: 100%;
+}
+
+#hero {
+  height: 100vh;
+    background: linear-gradient(45deg, rgba(255,175,189,.7), rgba(100,216,243,.7), rgba(234,236,198,.7), rgba(245,146,176,.7), rgba(52,219,216,.7)) 0 0 / 1000% no-repeat, url(https://picsum.photos/g/2000/1200?image=443) 0 0 / cover no-repeat;
+    -webkit-animation: gradientAnimation 40s ease infinite;
+    animation: gradientAnimation 40s ease infinite;
+}
+@-webkit-keyframes gradientAnimation {
+    0%   { background-position: 0% 30%, 0 0;}
+    50%  { background-position: 100% 70%, 0 0;}
+    100% { background-position: 0% 30%, 0 0;}
+}
+@keyframes gradientAnimation {
+    0%   { background-position: 0% 30%, 0 0;}
+    50%  { background-position: 100% 70%, 0 0;}
+    100% { background-position: 0% 30%, 0 0;}
+}
+#hero h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font : normal 600 72px/1 'Open Sans', sans-serif;
+    text-align: center;
+    white-space: nowrap;
+}
+h1 span {
+    display: block;
+    margin-top: 1em;
+    font-size: 40px;
+    font-weight: 300;
+}
+
 
 }
+@-webkit-keyframes gradientAnimation {
+   0%   { background-position: 0% 30%, 0 0;}
+   50%  { background-position: 100% 70%, 0 0;}
+   100% { background-position: 0% 30%, 0 0;}
+}
+@keyframes gradientAnimation {
+   0%   { background-position: 0% 30%, 0 0;}
+   50%  { background-position: 100% 70%, 0 0;}
+   100% { background-position: 0% 30%, 0 0;}
+}
+
 
 #hero h1 {
-  text-align: center; /* Centers text */
+  text-align: center;
   color: #ffffff;
 }
-.logo {
-  max-width: 100px;
+
+
+.logo{
+  width: 50%;
+  height: auto;
+  padding: 10px;
 }
 #work h2 {
   text-align:center
+  padding-left: 25px;
+}
+#work img {
+  border: 12px solid #52514f;;
+  border-radius: 4px;
+  padding: 5px;
 }
 .zoom {
   padding: 50px;
@@ -179,41 +238,23 @@ transition: all 0.4s ease 0s;
 .zoom:hover {
   transform: scale(1.5);
 }
-.berlin-illustration {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
+
+
+#project {
+  padding-top: 15px;
+  padding-right: 40px;
+  padding-bottom: 15px;
+  padding-left: 40px;
+  background: rgba(222,233,241,0.8); margin-right: 25px; margin-left: 25px;
 }
-@keyframes color-change {
-  0% {fill: #edc655;}
-  50% {fill: #fcffad;}
-  100% {fill: #f76414;}
+#project img {
+  border: 12px solid #52514f;
+  border-radius: 4px;
+  padding: 5px;
 }
-.sun {
-  animation-duration: 4s;
- animation-name: color-change;
- animation-iteration-count: infinite;
- animation-direction: alternate;
- animation-timing-function: linear;
-}
-@keyframes cloud-move {
-  from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
-}
-.cloud-front {
-  animation-duration: 30s;
-  animation-name: cloud-move;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
-}
-@keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(100px, 48px);}
-}
-.cloud-back {
-  animation: 34s cloud-move-reverse infinite alternate linear;
-}
+
+
+
 
 /*##################*/
 /*Top and Bottom Borders go Out */
@@ -221,7 +262,7 @@ transition: all 0.4s ease 0s;
   position: relative;
   padding: 10px 10px;
   text-decoration: none;
-  color: #FFFFFF;
+  color: #030E28;
 }
 .topbottombordersout a:before, .topbottombordersout  a:after
   {
@@ -229,7 +270,7 @@ transition: all 0.4s ease 0s;
       left: 0px;
       width: 100%;
       height: 2px;
-      background: #FFF;
+      background: #030E28;
       content: "";
       opacity: 0;
       transition: all 0.3s;
@@ -251,7 +292,7 @@ transition: all 0.4s ease 0s;
   {
       opacity: 1;
       transform: translateY(0px);
-      color: #FFFFFF;
+      color: #030E28;
   }
   /*#################*/
 .spacer {
@@ -343,7 +384,7 @@ header {
 }
 
   .container {
-  max-width: 1200px;
+  max-width:1200px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -356,6 +397,37 @@ header {
 .col-lg-7 {
   float: left;
   width: 58.33%
+}
+
+#project img {
+  width: 800px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#project p {
+  width: 800px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#project h4 {
+  width: 800px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#project .ul {
+  width: 800px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#project .li {
+  width: 800px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 }
