--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,7 +79,7 @@ img {
 }
 #about-image img{
 
-  border: 12px solid #030E28;
+  border: 8px solid #030E28;
   border-radius: 4px;
   padding: 5px;
   width: 30%;
@@ -104,43 +104,51 @@ a:active { /* selected link */
   color: #A54C05;
 }
 
-  .button {
-  color: #4A4A4A !important;
-text-transform: uppercase;
-text-decoration: none;
-background: #50CBCE;
-padding: 20px;
-border-radius: 5px;
-display: inline-block;
-border: none;
-transition: all 0.4s ease 0s;
+.button {
+	background-color:#030E28;
+	border-radius:28px;
+	border:1px solid #030E28;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family: sans-serif;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
 }
-
 .button:hover {
-background: #00AFB3;
-letter-spacing: 1px;
--webkit-box-shadow: 0px 5px 40px 10px rgba(0,0,0,0.57);
--moz-box-shadow: 0px 5px 40px 10px rgba(0,0,0,0.57);
-box-shadow: 5px 40px 10px rgba(0,0,0,0.57);
-transition: all 0.4s ease 0s;
-text-decoration: none;
+	background-color:#E7B5D0;
+  text-decoration: none;
+  color: #ffffff;
+  border:1px solid #E7B5D0;
 }
-
+.button:active {
+	position:relative;
+	top:1px;
+}
 .button.contact {
-color: #030E28 !important;
-text-transform: uppercase;
-text-decoration: none;
-background: #ffffff;
-padding: 20px;
-border: 4px solid #50CBCE !important;
-display: inline-block;
-transition: all 0.4s ease 0s;
+  background-color:#ffffff;
+  border-radius:28px;
+  border:5px solid #030E28;
+  display:inline-block;
+	cursor:pointer;
+  color: #030E28;
+  font-family: sans-serif;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
 }
 .button.contact:hover {
-color: #ffffff !important;
-background: #00AFB3;
-border-color: #00AFB3 !important;
-transition: all 0.4s ease 0s;
+  background-color:#030E28;
+  text-decoration: none;
+  color: #ffffff;
+  border:1px solid #030E28;
+}
+.button.contact:active {
+  position:relative;
+  top:1px;
 }
 
 
@@ -172,68 +180,26 @@ transition: all 0.4s ease 0s;
 }
 
 #hero {
-  height: 100vh;
-    background: linear-gradient(45deg, rgba(255,175,189,.7), rgba(100,216,243,.7), rgba(234,236,198,.7), rgba(245,146,176,.7), rgba(52,219,216,.7)) 0 0 / 1000% no-repeat, url(https://picsum.photos/g/2000/1200?image=443) 0 0 / cover no-repeat;
-    -webkit-animation: gradientAnimation 40s ease infinite;
-    animation: gradientAnimation 40s ease infinite;
-}
-@-webkit-keyframes gradientAnimation {
-    0%   { background-position: 0% 30%, 0 0;}
-    50%  { background-position: 100% 70%, 0 0;}
-    100% { background-position: 0% 30%, 0 0;}
-}
-@keyframes gradientAnimation {
-    0%   { background-position: 0% 30%, 0 0;}
-    50%  { background-position: 100% 70%, 0 0;}
-    100% { background-position: 0% 30%, 0 0;}
-}
-#hero h1 {
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font : normal 600 72px/1 'Montserrat', sans-serif;
 
-
-
-}
-h1 span {
-    display: block;
-    margin-top: 10em;
-    font-size: 40px;
-    font-weight: 300;
-
-}
-
-
-
-@-webkit-keyframes gradientAnimation {
-   0%   { background-position: 0% 30%, 0 0;}
-   50%  { background-position: 100% 70%, 0 0;}
-   100% { background-position: 0% 30%, 0 0;}
-}
-@keyframes gradientAnimation {
-   0%   { background-position: 0% 30%, 0 0;}
-   50%  { background-position: 100% 70%, 0 0;}
-   100% { background-position: 0% 30%, 0 0;}
 }
 
 
 
 .logo{
-  width: 30%;
+  width: 40%;
   height: auto;
   padding-left: 10px;
   padding-top: 10px;
+}
+#work {
+  background: rgba(222,233,241,0.8); 
 }
 #work h2 {
   text-align:center;
   padding-left: 25px;
 }
 #work img {
-  border: 12px solid #52514f;;
+  border: 8px solid #030E28;
   border-radius: 4px;
   padding: 5px;
 }
