--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,25 +12,32 @@ header {
   position: relative;
   padding: 0px;
 }
+
 nav {
-   width: auto;
-   margin-top: 4px;
- }
-nav > ul {
+  width: auto;
+  margin-top: 4px;
+}
+
+nav>ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-
 }
 
-nav > ul > li a {
+nav>ul>li {
+  display: inline-block;
+  padding-right: 20px;
+}
+
+nav>ul>li a {
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 50px;
-  text-transform: uppercase;font-weight: 700;
+  text-transform: uppercase;
+  font-weight: 700;
   color: #ffffff;
-  float: right;
 }
+
 .navtoggle li .icon {
   position: absolute;
   right: 0;
@@ -38,16 +45,19 @@ nav > ul > li a {
   font-size: 20px;
   padding-right: 10px;
 }
-.logo{
-  width: 30%;
+
+.logo {
+  width: 35%;
   height: auto;
-  padding-left: 10px;
-  padding-top: 10px;
+  padding-left: 2em;
+  padding-top: 0.8em;
+
 }
 
 * {
   box-sizing: border-box;
 }
+
 body {
   background-color: #ffffff;
   font-family: 'Montserrat', sans-serif;
@@ -57,33 +67,37 @@ body {
   color: #030E28;
 }
 
-
 h1, h2, h3, h4 {
   line-height: 1.4;
 }
+
 h1 {
-  font-size:2.75em;
+  font-size: 2.75em;
   font-weight: 700;
 }
+
 h2 {
   font-size: 2.25em;
   font-weight: 700;
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
 h3 {
   font-size: 1.75em;
   font-weight: 400;
 }
+
 h4 {
   font-size: 1.35em;
   font-weight: 400;
 }
+
 img {
   width: 100%;
 }
-#about-image img{
 
+#about-image img {
   border: 8px solid #030E28;
   border-radius: 4px;
   padding: 5px;
@@ -95,88 +109,103 @@ a {
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 400;
-  text-decoration: none; /* No underlining */
-
+  text-decoration: none;
+  /* No underlining */
 }
-a:hover,a:focus {
+
+a:hover, a:focus {
   color: #030E28;
   text-transform: uppercase;
   font-weight: 700;
-  text-decoration: underline; /* Underlining when hovering over a link */
+  text-decoration: underline;
+  /* Underlining when hovering over a link */
 }
 
-a:active { /* selected link */
+a:active {
+  /* selected link */
   color: #A54C05;
 }
-
-.button {
-	background-color:#030E28;
-	border-radius:28px;
-	border:1px solid #030E28;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family: sans-serif;
-	font-size:17px;
-	padding:16px 31px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
+.header > container {
+  max-width: 1200px;
 }
+.button {
+  background-color: #030E28;
+  border-radius: 28px;
+  border: 1px solid #030E28;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 17px;
+  padding: 16px 31px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+
 .button:hover {
-	background-color:#E7B5D0;
+  background-color: #E7B5D0;
   text-decoration: none;
   color: #ffffff;
-  border:1px solid #E7B5D0;
+  border: 1px solid #E7B5D0;
 }
+
 .button:active {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
+
 .button.contact {
-  background-color:#ffffff;
-  border-radius:28px;
-  border:5px solid #030E28;
-  display:inline-block;
-	cursor:pointer;
+  background-color: #ffffff;
+  border-radius: 28px;
+  border: 5px solid #030E28;
+  display: inline-block;
+  cursor: pointer;
   color: #030E28;
   font-family: sans-serif;
-	font-size:17px;
-	padding:16px 31px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
+  font-size: 17px;
+  padding: 16px 31px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
 }
+
 .button.contact:hover {
-  background-color:#030E28;
+  background-color: #030E28;
   text-decoration: none;
   color: #ffffff;
-  border:1px solid #030E28;
+  border: 1px solid #030E28;
 }
+
 .button.contact:active {
-  position:relative;
-  top:1px;
+  position: relative;
+  top: 1px;
 }
-
-
 
 .container {
   padding: 0 15px;
 }
+.container-nav {}
+
 .row-header {
   margin: 5px 0;
 }
+
 .row-header::after {
-  content:"";
+  content: "";
   clear: both;
   display: table;
 }
+
 .row {
-  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+  margin: 25px 0;
+  /* 25px top and bottom, 0 left and right */
 }
+
 .row::after {
-  content:"";
+  content: "";
   clear: both;
   display: table;
 }
+
 .center {
   display: block;
   margin-left: auto;
@@ -186,50 +215,49 @@ a:active { /* selected link */
 
 #hero {
   margin-bottom: 0px;
-
 }
-
-
-
 
 #work {
-  background: rgba(222,233,241,0.8);
+  background: rgba(222, 233, 241, 0.8);
 }
-#work h2 {
-  text-align:center;
 
+#work h2 {
+  text-align: center;
 }
+
 #work img {
   border: 8px solid #030E28;
   border-radius: 4px;
   padding: 5px;
 }
+
 .zoom {
   padding: 50px;
-  transition: transform .2s; /* Animation */
+  transition: transform .2s;
+  /* Animation */
   margin: 0 auto;
   display: inline-block;
 }
+
 .zoom:hover {
   transform: scale(1.5);
 }
-
 
 #project {
   padding-top: 15px;
   padding-right: 40px;
   padding-bottom: 15px;
   padding-left: 40px;
-  background: rgba(222,233,241,0.8); margin-right: 25px; margin-left: 25px;
+  background: rgba(222, 233, 241, 0.8);
+  margin-right: 25px;
+  margin-left: 25px;
 }
+
 #project img {
   border: 8px solid #52514f;
   border-radius: 4px;
   padding: 5px;
 }
-
-
-
 
 /*##################*/
 /*Top and Bottom Borders go Out */
@@ -239,61 +267,65 @@ a:active { /* selected link */
   text-decoration: none;
   color: #030E28;
 }
-.topbottombordersout a:before, .topbottombordersout  a:after
-  {
-      position: absolute;
-      left: 0px;
-      width: 100%;
-      height: 2px;
-      background: #030E28;
-      content: "";
-      opacity: 0;
-      transition: all 0.3s;
-  }
 
-.topbottombordersout  a:before
-  {
-      top: 0px;
-      transform: translateY(10px);
-  }
+.topbottombordersout a:before, .topbottombordersout a:after {
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  height: 2px;
+  background: #030E28;
+  content: "";
+  opacity: 0;
+  transition: all 0.3s;
+}
 
-.topbottombordersout a:after
-  {
-      bottom: 0px;
-      transform: translateY(-10px);
-  }
+.topbottombordersout a:before {
+  top: 0px;
+  transform: translateY(10px);
+}
 
-  .topbottombordersout  a:hover:before, .topbottombordersout  a:hover:after
-  {
-      opacity: 1;
-      transform: translateY(0px);
-      color: #030E28;
-  }
-  /*#################*/
+.topbottombordersout a:after {
+  bottom: 0px;
+  transform: translateY(-10px);
+}
+
+.topbottombordersout a:hover:before, .topbottombordersout a:hover:after {
+  opacity: 1;
+  transform: translateY(0px);
+  color: #030E28;
+}
+
+/*#################*/
 .spacer {
   height: 50px;
 }
+
 .project-card h3 {
   margin-bottom: 20px;
 }
+
 .navtoggle li:not(:last-child) {
   display: none;
 }
-.navtoggle.responsive li  {
+
+.navtoggle.responsive li {
   display: block;
 }
+
 .navtoggle.responsive nav {
   padding: 24px 0 0;
 }
-.navtoggle.responsive li  {
+
+.navtoggle.responsive li {
   display: block;
   padding: 10px 0;
-
+  text-align: center;
 }
 
-.navtoggle.responsive li:last-child  {
+.navtoggle.responsive li:last-child {
   padding: 0 0 10px;
 }
+
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
@@ -301,141 +333,147 @@ Medium devices (640px and larger)
   header {
     text-align: unset;
     padding: 20px 0 13px;
-    position: relative;
   }
 
-.col-md-6 {
-float: left;
-width: 50%;
-}
-[class*="col-"] {
-float: left;
-padding: 10px;
-}
-.col-md-8 {
-  float: left;
-  width: 66.66%;
-}
-.col-md-4 {
-  float: left;
-  width: 33.33%;
-}
-nav {
-   width:auto;
-   float: right;
-   margin-top: 4px;
- }
+  .col-md-6 {
+    float: left;
+    width: 50%;
+  }
 
-nav > ul {
-  margin: 1em 0;
-  float: right;
-}
-nav > ul> li {
+  [class*="col-"] {
+    float: left;
+    padding: 10px;
+  }
+
+  .col-md-8 {
+    float: left;
+    width: 66.66%;
+  }
+
+  .col-md-4 {
+    float: left;
+    width: 33.33%;
+  }
+
+  nav {
+    width: auto;
+    margin-top: 4px;
+  }
+
+  nav>ul {
+    margin: 1em 0;
+  }
+  nav > ul> li {
   display: inline-block;
-  float: right;
   padding-right: 20px;
 }
-.navtoggle li:not(:last-child) {
-  display: inline-block;
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+    display: none;
+  }
 }
-.navtoggle li:last-child {
-  display: none;
-}
-}
+
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
-header {
-  text-align: unset;
-  padding: 20px 0 13px;
-}
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
 
-  .container {
-  max-width:1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  .col-lg-5 {
+    float: left;
+    width: 41.66%
+  }
 
+  .col-lg-7 {
+    float: left;
+    width: 58.33%
+  }
 
-.col-lg-5 {
-  float: left;
-  width: 41.66%
-}
-.col-lg-7 {
-  float: left;
-  width: 58.33%
-}
+  #project img {
+    width: 800px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-#project img {
-  width: 800px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-#project p {
-  width: 800px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-#project h4 {
-  width: 800px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-#project .ul {
-  width: 800px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-#project .li {
-  width: 800px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-nav > ul {
-  margin: 1em 0;
-  float: right;
-}
-nav > ul> li {
-  display: inline-block;
-  float: right;
-  padding-right: 20px;
-}
-.navtoggle li:not(:last-child) {
-  display: inline-block;
-}
-.navtoggle li:last-child {
-  display: none;
-}
+  #project p {
+    width: 800px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #project h4 {
+    width: 800px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #project .ul {
+    width: 800px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #project .li {
+    width: 800px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  nav>ul {
+    margin: 1em 0;
+  }
+
+  nav>ul>li {
+    display: inline-block;
+    padding-right: 20px;
+  }
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+    display: none;
+  }
+
 }
 
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
 @media only screen and (min-width: 1440px) {
+  nav>ul {
+    margin: 1em 0;
+    float: right;
+  }
+
+  nav>ul>li {
+    display: inline-block;
+    padding-right: 20px;
+  }
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+    display: none;
+  }
 }
-nav > ul {
-  margin: 1em 0;
-  float: right;
-}
-nav > ul> li {
-  display: inline-block;
-  float: right;
-  padding-right: 20px;
-}
-.navtoggle li:not(:last-child) {
-  display: inline-block;
-}
-.navtoggle li:last-child {
-  display: none;
-}
+
 /* ==============================
 Extra-large devices (1920px or larger)
 ================================= */
-@media only screen and (min-width: 1920px) {
-}
+@media only screen and (min-width: 1920px) {}
